--- a/src/page/ComingSoon/ComingSoon.module.scss
+++ b/src/page/ComingSoon/ComingSoon.module.scss
@@ -135,7 +135,7 @@
 /* mobile */
 @media (max-width: 739px) {
     .slide-backdrop {
-        height: 200px;
+        height: 230px;
         object-fit: cover;
     }
 
